--- a/pom.xml
+++ b/pom.xml
@@ -4,8 +4,8 @@
   xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
   <modelVersion>4.0.0</modelVersion>
 
-  <groupId>selenium-sauce</groupId>
-  <artifactId>selenium-sauce</artifactId>
+  <groupId>selenium-sauce-integration</groupId>
+  <artifactId>selenium-sauce-integration</artifactId>
   <version>0.0.1-SNAPSHOT</version>
 
   <name>demo</name>
