--- a/config.properties
+++ b/config.properties
@@ -5,8 +5,8 @@ ExplicitWait = 100
 
 AppURL = https://www.lyft.com/rider/cities
 
-SAUCE_ACCESS_KEY = f1a82741ddd447dbadc4be57509e9481
-SAUCE_USERNAME = subrato29
+SAUCE_ACCESS_KEY = YOUR_SAUCE_ACCESS_KEY
+SAUCE_USERNAME = YOUR_SAUCE_USERNAME
 
 #Sauce or Local
 Platform = Sauce
